--- a/styles/style.css
+++ b/styles/style.css
@@ -199,7 +199,7 @@ a{
 
 .card-2 img{
   margin-top: 4rem;
-  width: 45rem;
+  width: 100%;
 }
 
 .card-3{
@@ -215,10 +215,10 @@ a{
 }
 .workflow-features{
   /* padding: 0rem 5rem; */
-  width: 100%;
+  width: 90%;
   display: flex;
   justify-content: center;
-  gap: 1.5rem;
+  gap: 3rem;
 }
 .workflow-feature img{
   height: 2rem;
@@ -241,6 +241,7 @@ a{
 } 
 
 .card-4{
+  width: 90%;
   margin: 5rem 0rem;
   display: flex;
   justify-content: center;
@@ -300,3 +301,108 @@ footer .footer-left{
 .footer-right img{
   width: 1.25rem;
 }
+
+
+/* media queries  */
+
+@media (max-width : 1200px){
+  html{
+    font-size: 16px;
+  }
+}
+
+@media (max-width : 991px){
+  .workflow-features{
+    flex-wrap: wrap;
+  }
+  .card-4{
+    flex-wrap: wrap;
+  }
+  footer{
+    padding: 2rem 3rem;
+  }
+  .footer-left{
+    gap: 2rem;
+  }
+  .quick-links{
+    margin-left: 1.5rem;
+    gap:0.5rem;
+    width : 20rem;
+  }
+  .quick-links a{
+    font-size: 0.8rem;
+    width: 6rem;
+  }
+}
+@media(max-width:768px){
+  .card-1 .part-2{
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  footer{
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+  }
+  .footer-left{
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2.5rem;
+  }
+}
+@media(max-width:576px){
+  html{
+    font-size: 12px;
+  }
+  .header-download{
+    width: 30rem;
+  }
+  .card h2{
+    font-size: 1.5rem;
+  }
+  .card p{
+    font-size: 0.9rem;
+  }
+  .part-1{
+    width: 30rem;
+  }
+}
+
+/* custom mobile  */
+@media(max-width:504px){
+  .card-1 .part-2{
+    text-align: center;
+  }
+}
+@media(max-width:400px){
+  
+  .card-4{
+    flex-direction: column;
+    gap: 4rem;
+    align-items: center;
+  }
+  .card-4 img{
+    width: 12rem;
+    height: 5rem;
+  } 
+  .footer-left{
+    gap: 3rem !important;
+    text-align: center;
+  }
+  .quick-links{
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    
+  }
+  .card-2 img{
+    width: 90%;
+  }
+  .header-download{
+    width: 22.5rem;
+  }
+  .part-1{
+    width: 22.5rem;
+  }
+}
+
